# api/terrainmgmt.go
@@ -16,6 +16,7 @@ import (
 // @Success      200 {object} kinds.JobLimitsResponse
 // @Failure      404 {object} kinds.GenericResponse "No job limits configured"
 // @Failure      500 {object} kinds.GenericResponse "Failed to retrieve job limits"
+// @Security     BasicAuth
 // @Router       /terrain/users/{username}/job-limits [get]
 func (a *API) getJobLimits(w http.ResponseWriter, r *http.Request) error {
 	username := r.PathValue("username")
@@ -48,6 +49,7 @@ func (a *API) getJobLimits(w http.ResponseWriter, r *http.Request) error {
 // @Success      200 {object} kinds.GenericResponse
 // @Failure      422 {object} kinds.ValidationErrorResponse "Validation error"
 // @Failure      500 {object} kinds.GenericResponse "Failed to set job limits"
+// @Security     BasicAuth
 // @Router       /terrain/users/{username}/job-limits [post]
 func (a *API) setJobLimits(w http.ResponseWriter, r *http.Request) error {
 	username := r.PathValue("username")
